crates/pgls_pretty_print/tests/snapshots/multi/tests__vacuum_parallel_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/vacuum_parallel.sql
---
set max_parallel_maintenance_workers = 4;

set min_parallel_index_scan_size = '128kB';

create table parallel_vacuum_table (a int) with (autovacuum_enabled = off);

insert into parallel_vacuum_table select i from generate_series(1, 10000) as i;

create index "regular_sized_index" on parallel_vacuum_table using btree (a);

create index "typically_sized_index" on parallel_vacuum_table using btree (a);

create index "vacuum_in_leader_small_index" on parallel_vacuum_table using btree ((1));

select
  exists
  (
    select
      1
    from
      pg_class
    where
      oid =
      cast('vacuum_in_leader_small_index' as regclass) and
      pg_relation_size(oid) <
      pg_size_bytes(
        current_setting('min_parallel_index_scan_size')
      )
  )
  as leader_will_handle_small_index;

select
  COUNT(*) as trigger_parallel_vacuum_nindexes
from
  pg_class
where
  oid
  in (
    cast('regular_sized_index' as regclass), cast('typically_sized_index' as regclass)
  ) and
  pg_relation_size(oid) >=
  pg_size_bytes(
    current_setting('min_parallel_index_scan_size')
  );

delete from parallel_vacuum_table;

vacuum (PARALLEL 4, INDEX_CLEANUP "on") parallel_vacuum_table;

insert into parallel_vacuum_table select i from generate_series(1, 10000) as i;

reset max_parallel_maintenance_workers;

reset min_parallel_index_scan_size;
