crates/pgls_pretty_print/tests/snapshots/multi/tests__xid_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/xid.sql
snapshot_kind: text
---
SELECT
  CAST('010' AS XID),
  CAST('42' AS XID),
  CAST('0xffffffff' AS XID),
  CAST('-1' AS XID),
  CAST('010' AS xid8),
  CAST('42' AS xid8),
  CAST('0xffffffffffffffff' AS xid8),
  CAST('-1' AS xid8);

SELECT CAST('' AS XID);

SELECT CAST('asdf' AS XID);

SELECT CAST('' AS xid8);

SELECT CAST('asdf' AS xid8);

SELECT pg_input_is_valid('42', 'xid');

SELECT pg_input_is_valid('asdf', 'xid');

SELECT * FROM pg_input_error_info('0xffffffffff', 'xid');

SELECT pg_input_is_valid('42', 'xid8');

SELECT pg_input_is_valid('asdf', 'xid8');

SELECT * FROM pg_input_error_info('0xffffffffffffffffffff', 'xid8');

SELECT CAST('1' AS XID) = CAST('1' AS XID);

SELECT CAST('1' AS XID) <> CAST('1' AS XID);

SELECT CAST('1' AS xid8) = CAST('1' AS xid8);

SELECT CAST('1' AS xid8) <> CAST('1' AS xid8);

SELECT CAST('1' AS XID) = CAST(CAST('1' AS xid8) AS XID);

SELECT CAST('1' AS XID) <> CAST(CAST('1' AS xid8) AS XID);

SELECT CAST('1' AS XID) < CAST('2' AS XID);

SELECT CAST('1' AS XID) <= CAST('2' AS XID);

SELECT CAST('1' AS XID) > CAST('2' AS XID);

SELECT CAST('1' AS XID) >= CAST('2' AS XID);

SELECT
  CAST('1' AS xid8) < CAST('2' AS xid8),
  CAST('2' AS xid8) < CAST('2' AS xid8),
  CAST('2' AS xid8) < CAST('1' AS xid8);

SELECT
  CAST('1' AS xid8) <= CAST('2' AS xid8),
  CAST('2' AS xid8) <= CAST('2' AS xid8),
  CAST('2' AS xid8) <= CAST('1' AS xid8);

SELECT
  CAST('1' AS xid8) > CAST('2' AS xid8),
  CAST('2' AS xid8) > CAST('2' AS xid8),
  CAST('2' AS xid8) > CAST('1' AS xid8);

SELECT
  CAST('1' AS xid8) >= CAST('2' AS xid8),
  CAST('2' AS xid8) >= CAST('2' AS xid8),
  CAST('2' AS xid8) >= CAST('1' AS xid8);

SELECT xid8cmp('1', '2'), xid8cmp('2', '2'), xid8cmp('2', '1');

CREATE TABLE xid8_t1 (x xid8);

INSERT INTO xid8_t1 VALUES ('0'), ('010'), ('42'), ('0xffffffffffffffff'), ('-1');

SELECT MIN(x), MAX(x) FROM xid8_t1;

CREATE INDEX ON xid8_t1 USING btree (x);

CREATE INDEX ON xid8_t1 USING hash (x);

DROP TABLE "xid8_t1";

SELECT CAST('12:13:' AS pg_snapshot);

SELECT CAST('12:18:14,16' AS pg_snapshot);

SELECT CAST('12:16:14,14' AS pg_snapshot);

SELECT CAST('31:12:' AS pg_snapshot);

SELECT CAST('0:1:' AS pg_snapshot);

SELECT CAST('12:13:0' AS pg_snapshot);

SELECT CAST('12:16:14,13' AS pg_snapshot);

SELECT pg_input_is_valid('12:13:', 'pg_snapshot');

SELECT pg_input_is_valid('31:12:', 'pg_snapshot');

SELECT * FROM pg_input_error_info('31:12:', 'pg_snapshot');

SELECT pg_input_is_valid('12:16:14,13', 'pg_snapshot');

SELECT * FROM pg_input_error_info('12:16:14,13', 'pg_snapshot');

CREATE TEMPORARY TABLE snapshot_test (
  nr INT,
  snap pg_snapshot
);

INSERT INTO snapshot_test VALUES (1, '12:13:');

INSERT INTO snapshot_test VALUES (2, '12:20:13,15,18');

INSERT INTO snapshot_test VALUES (3, '100001:100009:100005,100007,100008');

INSERT INTO snapshot_test
VALUES
  (
    4,
    '100:150:101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131'
  );

SELECT snap FROM snapshot_test ORDER BY nr;

SELECT
  pg_snapshot_xmin(snap),
  pg_snapshot_xmax(snap),
  pg_snapshot_xip(snap)
FROM
  snapshot_test
ORDER BY nr;

SELECT
  id,
  pg_visible_in_snapshot(
    CAST(CAST(id AS TEXT) AS xid8),
    snap
  )
FROM
  snapshot_test,
  generate_series(11, 21) AS id
WHERE
  nr = 2;

SELECT
  id,
  pg_visible_in_snapshot(
    CAST(CAST(id AS TEXT) AS xid8),
    snap
  )
FROM
  snapshot_test,
  generate_series(90, 160) AS id
WHERE
  nr = 4;

SELECT pg_current_xact_id() >= pg_snapshot_xmin(pg_current_snapshot());

SELECT pg_visible_in_snapshot(pg_current_xact_id(), pg_current_snapshot());

SELECT CAST('1000100010001000:1000100010001100:1000100010001012,1000100010001013' AS pg_snapshot);

SELECT
  pg_visible_in_snapshot(
    '1000100010001012',
    '1000100010001000:1000100010001100:1000100010001012,1000100010001013'
  );

SELECT
  pg_visible_in_snapshot(
    '1000100010001015',
    '1000100010001000:1000100010001100:1000100010001012,1000100010001013'
  );

SELECT CAST('1:9223372036854775807:3' AS pg_snapshot);

SELECT CAST('1:9223372036854775808:3' AS pg_snapshot);

BEGIN;

SELECT pg_current_xact_id_if_assigned() IS NULL;

SELECT pg_current_xact_id();

SELECT pg_current_xact_id_if_assigned() IS NOT DISTINCT FROM CAST('pg_current_xact_id' AS xid8);

COMMIT;

BEGIN;

SELECT pg_current_xact_id() AS committed;

COMMIT;

BEGIN;

SELECT pg_current_xact_id() AS rolledback;

ROLLBACK;

BEGIN;

SELECT pg_current_xact_id() AS inprogress;

SELECT pg_xact_status(CAST(CAST('committed' AS TEXT) AS xid8)) AS committed;

SELECT pg_xact_status(CAST(CAST('rolledback' AS TEXT) AS xid8)) AS rolledback;

SELECT pg_xact_status(CAST(CAST('inprogress' AS TEXT) AS xid8)) AS inprogress;

SELECT pg_xact_status(CAST('1' AS xid8));

SELECT pg_xact_status(CAST('2' AS xid8));

SELECT pg_xact_status(CAST('3' AS xid8));

COMMIT;

BEGIN;

CREATE FUNCTION test_future_xid_status(xid8)
RETURNS VOID
LANGUAGE "plpgsql"
AS '
BEGIN
  PERFORM pg_xact_status($1);
  RAISE EXCEPTION ''didn''''t ERROR at xid in the future as expected'';
EXCEPTION
  WHEN invalid_parameter_value THEN
    RAISE NOTICE ''Got expected error for xid in the future'';
END;
';

SELECT test_future_xid_status(CAST(CAST('inprogress' + 10000 AS TEXT) AS xid8));

ROLLBACK;
